to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

ctests-V10-00-37 16 November 2014 Ivana Hrivnacova
- Added Hadr06 in GNUmake test

ctests-V10-00-36 14 November 2014 Mathieu Karamitros
- Add PRECMD to GEANT4_ADD_TEST

ctests-V10-00-35 12 November 2014 Marc Verderi
- Added new extended biasing/GB04 example

ctests-V10-00-34 08 November 2014 Ivana Hrivnacova
- Disabled wholeNuclearDNA in GNUmake test (as it requires many data files)
 
ctests-V10-00-33 08 November 2014 Ivana Hrivnacova
- Added copying data files for DICOM and pdb4dna examples in GNUmake test

ctests-V10-00-32 08 November 2014 Mathieu Karamitros
- Correct execution of microdosimetry

ctests-V10-00-31 08 November 2014 Ivana Hrivnacova
- Added new extended biasing/GB03 example

ctests-V10-00-30 -- 05 November 2014 Mathieu Karamitros
- update command line options of pdb4dna

ctests-V10-00-29 -- 30 October 2014 Michael Kelsey
- retag because of incorrect CDash rejection.  No changes.

ctests-V10-00-28 -- 28 October 2014 Mathieu Karamitros
- remove incorrect environment for pdb4dna & wholeNuclearDNA

ctests-V10-00-27 -- 26 October 2014 Mathieu Karamitros
- fix paths for wholeNuclearDNA & pdb4dna in GNUMakeTestfile.cmake

ctests-V10-00-26 -- 25 October 2014 Mathieu Karamitros
- Correct execution command of pdb4dna

ctests-V10-00-25 -- 24 October 2014 Mathieu Karamitros
- add command line options to chem1,2,3

ctests-V10-00-24 -- 24 October 2014 Mathieu Karamitros
- add pdb4dna + wholeNuclearDNA for testing

ctests-V10-00-23 -- 23 October 2014 Mathieu Karamitros
- Add extended/dnaphysics for testing

ctests-V10-00-22 -- 23 October 2014 Mathieu Karamitros