@@ -86,15 +86,15 @@ function(GEANT4_ADD_TEST test)
     add_test(${test}-build make -C ${ARG_BUILD} ${ARG_TARGET})
     set(ARG_DEPENDS ${ARG_DEPENDS} ${test}-build)
     if(ARG_PRECMD)
-        add_test(NAME ${test} COMMAND ${ARG_PRECMD} && ${ARG_COMMAND})
+        add_test(${test} COMMAND ${ARG_PRECMD} && ${ARG_COMMAND})
     else()
-        add_test(NAME ${test} COMMAND ${ARG_COMMAND})
+        add_test(${test} COMMAND ${ARG_COMMAND})
     endif()
   else()
     if(ARG_PRECMD)
-        add_test(NAME ${test} COMMAND ${ARG_PRECMD} && ${ARG_COMMAND})
+        add_test(${test} COMMAND ${ARG_PRECMD} && ${ARG_COMMAND})
     else()
-        add_test(NAME ${test} COMMAND ${ARG_COMMAND})
+        add_test(${test} COMMAND ${ARG_COMMAND})
     endif()
   endif()
   if(ARG_ENVIRONMENT)
